# mesh-lesson

./: .gitignore  CMakeLists.txt  README.md
src/: lesson_basic.cpp  lesson_clip.cpp  lesson_simplification.cpp
src/algorithm/: cgal_base.h  cgal_clip.h  cgal_simplification.h
src/core/: basetypes.h
src/core/gltf/: accessor.h  buffer_view.h  extension.h  gltf.h  image.h  material.h  mesh.h  node.h  primitive.h  sampler.h  scene.h  texture.h
src/core/math/: matrix4.h  point3.h  vector3.h
src/mesh/: cube.h  plane.h  sphere.h
src/reader/: geojson_reader.h  obj_reader.h  off_reader.h
src/utils/: geo_util.h  io_util.h
src/writer/: geojson_writer.h  obj_writer.h
